k8s/clusters/cluster-0/manifests/system-rook-ceph/add-ons/dashboard/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rook-ceph-mgr-dashboard
  namespace: system-rook-ceph
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/target: ingress.${INGRESS_DOMAIN}
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: system-ingress-rfc1918-ips@kubernetescrd
  labels:
    app.kubernetes.io/instance: rook-ceph-mgr-dashboard
    app.kubernetes.io/name: rook-ceph-mgr-dashboard
spec:
  ingressClassName: traefik
  rules:
    - host: "rook-${CLUSTER_NAME}.${INGRESS_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: rook-ceph-mgr-dashboard
                port:
                  name: http-dashboard
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "rook-${CLUSTER_NAME}.${INGRESS_DOMAIN}"
      secretName: tls.rook-ceph-mgr-dashboard
